--- a/index.html
+++ b/index.html
@@ -156,12 +156,19 @@
           <h2 class="portfolio-main-title">Our Portfolio</h2>
           <ul class="portfolio-section">
             <li class="portfolio-item">
-              <img
-                src="./images/portfolio-1.jpg"
-                alt="banking app"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-wrap-pictute">
+                <img
+                  src="./images/portfolio-1.jpg"
+                  alt="banking app"
+                  width="360"
+                  height="300"
+                />
+                <p class="portfolio-wrap-item">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-container">
                 <h3 class="portfolio-title">Banking App</h3>
                 <p class="portfolio-description">App</p>
@@ -188,48 +195,76 @@
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/portfolio-3.jpg"
-                alt="meditashion app"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-wrap-pictute">
+                <img
+                  src="./images/portfolio-3.jpg"
+                  alt="meditashion app"
+                  width="360"
+                  height="300"
+                />
+                <p class="portfolio-wrap-item">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-container">
                 <h3 class="portfolio-title">Meditation App</h3>
                 <p class="portfolio-description">App</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/portfolio-4.jpg"
-                alt="taxi service"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-wrap-pictute">
+                <img
+                  src="./images/portfolio-4.jpg"
+                  alt="taxi service"
+                  width="360"
+                  height="300"
+                />
+                <p class="portfolio-wrap-item">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-container">
                 <h3 class="portfolio-title">Taxi Service</h3>
                 <p class="portfolio-description">Marketing</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/portfolio-5.jpg"
-                alt="Illustrations"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-wrap-pictute">
+                <img
+                  src="./images/portfolio-5.jpg"
+                  alt="Illustrations"
+                  width="360"
+                  height="300"
+                />
+                <p class="portfolio-wrap-item">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-container">
                 <h3 class="portfolio-title">Screen Illustrations</h3>
                 <p class="portfolio-description">Design</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/portfolio-6.jpg"
-                alt="Online Courses"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-wrap-pictute">
+                <img
+                  src="./images/portfolio-6.jpg"
+                  alt="Online Courses"
+                  width="360"
+                  height="300"
+                />
+                <p class="portfolio-wrap-item">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-container">
                 <h3 class="portfolio-title">Online Courses</h3>
                 <p class="portfolio-description">Marketing</p>
