--- a/index.html
+++ b/index.html
@@ -64,6 +64,13 @@
           <h2 class="visually-hidden">Benefits</h2>
           <ul class="benefits">
             <li class="benefits-item">
+              <!------------------------------------ -->
+              <div class="benefits-logo-item">
+                <svg class="benefits-logo-svg" width="64" height="64">
+                  <use href="./images/icons.svg#icon-antenna"></use>
+                </svg>
+              </div>
+              <!--------------------------------------->
               <h3 class="benefits-title">Strategy</h3>
               <p class="benefits-description">
                 Our goal is to identify the business problem to walk away with
@@ -71,6 +78,11 @@
               </p>
             </li>
             <li class="benefits-item">
+              <div class="benefits-logo-item">
+                <svg class="benefits-logo-svg" width="64" height="64">
+                  <use href="./images/icons.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="benefits-title">Punctuality</h3>
               <p class="benefits-description">
                 Bring the key message to the brand's audience for the best price
@@ -78,6 +90,11 @@
               </p>
             </li>
             <li class="benefits-item">
+              <div class="benefits-logo-item">
+                <svg class="benefits-logo-svg" width="64" height="64">
+                  <use href="./images/icons.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="benefits-title">Diligence</h3>
               <p class="benefits-description">
                 Research and confirm brands with the strongest digital growth
@@ -85,6 +102,11 @@
               </p>
             </li>
             <li class="benefits-item">
+              <div class="benefits-logo-item">
+                <svg class="benefits-logo-svg" width="64" height="64">
+                  <use href="./images/icons.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="benefits-title">Technologies</h3>
               <p class="benefits-description">
                 Design practice focused on digital experiences. We bring forth a
