--- a/index.html
+++ b/index.html
@@ -132,6 +132,40 @@
                 <h3 class="team-title">Mark Guerrero</h3>
                 <p class="team-description">Product Designer</p>
               </div>
+              <div>
+                <!-- -------------------------------------------->
+                <ul class="team-logo-block">
+                  <li class="team-logo-item">
+                    <a href="">
+                      <svg class="team-logo-svg" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-logo-item">
+                    <a href="">
+                      <svg class="team-logo-svg" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-logo-item">
+                    <a href="">
+                      <svg class="team-logo-svg" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-logo-item">
+                    <a href="">
+                      <svg class="team-logo-svg" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
+              <!-- ------------------------------------------------->
             </li>
             <li class="team-block">
               <img
