--- a/index.html
+++ b/index.html
@@ -131,9 +131,7 @@
               <div class="team-container">
                 <h3 class="team-title">Mark Guerrero</h3>
                 <p class="team-description">Product Designer</p>
-              </div>
-              <div>
-                <!-- -------------------------------------------->
+
                 <ul class="team-logo-block">
                   <li class="team-logo-item">
                     <a href="">
@@ -165,8 +163,8 @@
                   </li>
                 </ul>
               </div>
-              <!-- ------------------------------------------------->
             </li>
+
             <li class="team-block">
               <img
                 src="./images/img-2.jpg"
@@ -177,8 +175,40 @@
               <div class="team-container">
                 <h3 class="team-title">Tom Ford</h3>
                 <p class="team-description">Frontend Developer</p>
+
+                <ul class="team-logo-block">
+                  <li class="team-logo-item">
+                    <a href="">
+                      <svg class="team-logo-svg" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-logo-item">
+                    <a href="">
+                      <svg class="team-logo-svg" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-logo-item">
+                    <a href="">
+                      <svg class="team-logo-svg" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-logo-item">
+                    <a href="">
+                      <svg class="team-logo-svg" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
+
             <li class="team-block">
               <img
                 src="./images/img-1.jpg"
@@ -189,8 +219,40 @@
               <div class="team-container">
                 <h3 class="team-title">Camila Garcia</h3>
                 <p class="team-description">Marketing</p>
+
+                <ul class="team-logo-block">
+                  <li class="team-logo-item">
+                    <a href="">
+                      <svg class="team-logo-svg" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-logo-item">
+                    <a href="">
+                      <svg class="team-logo-svg" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-logo-item">
+                    <a href="">
+                      <svg class="team-logo-svg" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-logo-item">
+                    <a href="">
+                      <svg class="team-logo-svg" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
+
             <li class="team-block">
               <img
                 src="./images/img.jpg"
@@ -201,6 +263,37 @@
               <div class="team-container">
                 <h3 class="team-title">Daniel Wilson</h3>
                 <p class="team-description">UI Designer</p>
+
+                <ul class="team-logo-block">
+                  <li class="team-logo-item">
+                    <a href="">
+                      <svg class="team-logo-svg" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-logo-item">
+                    <a href="">
+                      <svg class="team-logo-svg" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-logo-item">
+                    <a href="">
+                      <svg class="team-logo-svg" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-logo-item">
+                    <a href="">
+                      <svg class="team-logo-svg" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
