--- a/index.html
+++ b/index.html
@@ -64,13 +64,11 @@
           <h2 class="visually-hidden">Benefits</h2>
           <ul class="benefits">
             <li class="benefits-item">
-              <!------------------------------------ -->
               <div class="benefits-logo-item">
                 <svg class="benefits-logo-svg" width="64" height="64">
                   <use href="./images/icons.svg#icon-antenna"></use>
                 </svg>
               </div>
-              <!--------------------------------------->
               <h3 class="benefits-title">Strategy</h3>
               <p class="benefits-description">
                 Our goal is to identify the business problem to walk away with
@@ -433,6 +431,40 @@
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
         </p>
+
+        <div class="footer-media">
+          <p class="footer-media-discription">Social media</p>
+          <ul class="footer-logo-block">
+            <li class="team-logo-item">
+              <a href="">
+                <svg class="team-logo-svg" width="24" height="24">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="team-logo-item">
+              <a href="">
+                <svg class="team-logo-svg" width="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="team-logo-item">
+              <a href="">
+                <svg class="team-logo-svg" width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="team-logo-item">
+              <a href="">
+                <svg class="team-logo-svg" width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
