--- a/index.html
+++ b/index.html
@@ -423,14 +423,16 @@
     </main>
 
     <footer class="footer-main">
-      <div class="container">
-        <a href="./index.html" class="footer-logo footer-link"
-          >Web<span class="footer-studio">Studio</span></a
-        >
-        <p class="footer-description">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+      <div class="footer">
+        <div class="container">
+          <a href="./index.html" class="footer-logo footer-link"
+            >Web<span class="footer-studio">Studio</span></a
+          >
+          <p class="footer-description">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
 
         <div class="footer-media">
           <p class="footer-media-discription">Social media</p>
