--- a/index.html
+++ b/index.html
@@ -437,30 +437,30 @@
         <div class="footer-media">
           <p class="footer-media-discription">Social media</p>
           <ul class="footer-logo-block">
-            <li class="team-logo-item">
+            <li class="footer-logo-item">
               <a href="">
-                <svg class="team-logo-svg" width="24" height="24">
+                <svg class="footer-logo-svg" width="24" height="24">
                   <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
-            <li class="team-logo-item">
+            <li class="footer-logo-item">
               <a href="">
-                <svg class="team-logo-svg" width="24" height="24">
+                <svg class="footer-logo-svg" width="24" height="24">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
-            <li class="team-logo-item">
+            <li class="footer-logo-item">
               <a href="">
-                <svg class="team-logo-svg" width="24" height="24">
+                <svg class="footer-logo-svg" width="24" height="24">
                   <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
-            <li class="team-logo-item">
+            <li class="footer-logo-item">
               <a href="">
-                <svg class="team-logo-svg" width="24" height="24">
+                <svg class="footer-logo-svg" width="24" height="24">
                   <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
