--- a/index.html
+++ b/index.html
@@ -132,28 +132,28 @@
 
                 <ul class="team-logo-block">
                   <li class="team-logo-item">
-                    <a href="">
+                    <a href="" class="team-social-link">
                       <svg class="team-logo-svg" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-logo-item">
-                    <a href="">
+                    <a href="" class="team-social-link">
                       <svg class="team-logo-svg" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-logo-item">
-                    <a href="">
+                    <a href="" class="team-social-link">
                       <svg class="team-logo-svg" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-logo-item">
-                    <a href="">
+                    <a href="" class="team-social-link">
                       <svg class="team-logo-svg" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
@@ -438,28 +438,28 @@
           <p class="footer-media-discription">Social media</p>
           <ul class="footer-logo-block">
             <li class="footer-logo-item">
-              <a href="">
+              <a href="" class="footer-social-link">
                 <svg class="footer-logo-svg" width="24" height="24">
                   <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-logo-item">
-              <a href="">
+              <a href="" class="footer-social-link">
                 <svg class="footer-logo-svg" width="24" height="24">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-logo-item">
-              <a href="">
+              <a href="" class="footer-social-link">
                 <svg class="footer-logo-svg" width="24" height="24">
                   <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-logo-item">
-              <a href="">
+              <a href="" class="footer-social-link">
                 <svg class="footer-logo-svg" width="24" height="24">
                   <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
